--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,8 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # act like GNU screen
-unbind C-b
-set -g prefix C-a
+# unbind C-b
+# set -g prefix C-a
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
