tmux.conf: last-pane, split-window

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,7 +33,11 @@ set -g status-right ''
 set -g history-limit 10000
 
 # switch to last pane
-bind-key C-a last-pane
+bind-key b last-pane
+
+#- overwrites delete-buffer
+bind-key - split-window
+bind-key | split-window -h
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
