tmux conf update: no escape wait

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,27 +7,39 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+
+#bind-key -r C-h select-window -t :-
+#bind-key -r C-l select-window -t :+
+
+bind-key -r C-h resize-pane -L 5
+bind-key -r C-j resize-pane -D 5
+bind-key -r C-k resize-pane -U 5
+bind-key -r C-l resize-pane -R 5
 
 # act like GNU screen
 # unbind C-b
 # set -g prefix C-a
 
+# escape delay
+set -s escape-time 0
+
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
+
+# Highlight active window
+set-window-option -g window-status-current-bg '#666666'
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
+set -g status-bg '#2f4f4f'
 set -g status-fg '#aaaaaa'
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
-set -g status-right ''
+#set -g status-right ''
 
 # increase scrollback lines
 set -g history-limit 10000
@@ -35,7 +47,10 @@ set -g history-limit 10000
 # switch to last pane
 bind-key b last-pane
 
-#- overwrites delete-buffer
+# switch to last window
+bind-key C-b last-window
+
+# '-' overwrites delete-buffer
 bind-key - split-window
 bind-key | split-window -h
 
