--- a/tmux.conf
+++ b/tmux.conf
@@ -28,18 +28,25 @@ set -g base-index 1
 set-window-option -g pane-base-index 1
 
 # Highlight active window
-set-window-option -g window-status-current-bg '#666666'
+#set-window-option -g window-status-current-bg '#666666'
+set-window-option -g window-status-current-fg '#aaaaaa'
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
 set -g status-bg '#2f4f4f'
-set -g status-fg '#aaaaaa'
+set -g status-fg '#808080'
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 #set -g status-right ''
+#set -g status-right '#[fg=green]#H'
+
+# Rather than constraining window size to the maximum size of any client 
+# connected to the *session*, constrain window size to the maximum size of any 
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
 
 # increase scrollback lines
 set -g history-limit 10000
