solarized light theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,12 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
+# escape delay
+set -sg escape-time 0
+
+# shortcut for reloading config
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -20,31 +26,29 @@ bind-key -r C-l resize-pane -R 5
 # unbind C-b
 # set -g prefix C-a
 
-# escape delay
-set -s escape-time 0
-
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
 # Highlight active window
-#set-window-option -g window-status-current-bg '#666666'
-set-window-option -g window-status-current-fg '#aaaaaa'
+#set-window-option -g window-status-current-bg '#ffffd7'
+set-window-option -g window-status-current-fg '#808080'
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#2f4f4f'
-set -g status-fg '#808080'
+#set -g status-bg '#d7d7af'
+set -g status-bg 'white'
+set -g status-fg '#aaaaaa'
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 #set -g status-right ''
 #set -g status-right '#[fg=green]#H'
 
-# Rather than constraining window size to the maximum size of any client 
-# connected to the *session*, constrain window size to the maximum size of any 
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
 
