--- a/tmux.conf
+++ b/tmux.conf
@@ -9,18 +9,18 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # act like vim
 setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+
+# http://robots.thoughtbot.com/post/53022241323/seamlessly-navigate-vim-and-tmux-splits
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 #bind-key -r C-h select-window -t :-
 #bind-key -r C-l select-window -t :+
-
-bind-key -r C-h resize-pane -L 5
-bind-key -r C-j resize-pane -D 5
-bind-key -r C-k resize-pane -U 5
-bind-key -r C-l resize-pane -R 5
 
 # act like GNU screen
 # unbind C-b
@@ -32,15 +32,16 @@ set-window-option -g pane-base-index 1
 
 # Highlight active window
 #set-window-option -g window-status-current-bg '#ffffd7'
-set-window-option -g window-status-current-fg '#808080'
+set-window-option -g window-status-current-fg 'green'
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# soften status bar color from harsh green to light gray
+# status bar color
 #set -g status-bg '#d7d7af'
 set -g status-bg 'white'
-set -g status-fg '#aaaaaa'
+#set -g status-fg '#aaaaaa'
+set -g status-fg '#808080'
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
