--- a/tmux.conf
+++ b/tmux.conf
@@ -19,9 +19,6 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-#bind-key -r C-h select-window -t :-
-#bind-key -r C-l select-window -t :+
-
 # act like GNU screen
 # unbind C-b
 # set -g prefix C-a
@@ -38,9 +35,7 @@ set-window-option -g window-status-current-fg 'green'
 set -g renumber-windows on
 
 # status bar color
-#set -g status-bg '#d7d7af'
 set -g status-bg 'white'
-#set -g status-fg '#aaaaaa'
 set -g status-fg '#808080'
 
 # remove administrative debris (session name, hostname, time) in status bar
@@ -62,8 +57,7 @@ bind-key b last-pane
 # switch to last window
 bind-key C-b last-window
 
-# '-' overwrites delete-buffer
-bind-key - split-window
+bind-key _ split-window
 bind-key | split-window -h
 
 # Local config
