change tmux bind key to <C-a>

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,10 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
+# act like GNU screen
+unbind C-b
+set -g prefix C-a
+
 # escape delay
 set -sg escape-time 0
 
@@ -18,10 +22,6 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
-# act like GNU screen
-# unbind C-b
-# set -g prefix C-a
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
@@ -52,10 +52,10 @@ setw -g aggressive-resize on
 set -g history-limit 10000
 
 # switch to last pane
-bind-key b last-pane
+#bind-key a last-pane
 
 # switch to last window
-bind-key C-b last-window
+bind-key a last-window
 
 bind-key _ split-window
 bind-key | split-window -h
