--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,48 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
+# C-b is not acceptable as a prefix, neither C-a, because both used by Vim
+# Bind C-- as a prefix
+# http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
+set -g prefix C-_
+#bind C-_ send-prefix
 
-# escape delay
-set -sg escape-time 0
+# Unbind C-b as the default prefix
+unbind C-b
 
 # shortcut for reloading config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# escape delay
+set -sg escape-time 1
+
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+setw -g pane-base-index 1
+
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# increase scrollback lines
+set -g history-limit 10000
+
 # act like vim
 setw -g mode-keys vi
+
+# y and p as in vim
+# https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'Space' halfpage-down
+bind -t vi-copy 'Bspace' halfpage-up
 
 # http://robots.thoughtbot.com/post/53022241323/seamlessly-navigate-vim-and-tmux-splits
 # Smart pane switching with awareness of vim splits
@@ -23,16 +53,9 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
 # Highlight active window
-#set-window-option -g window-status-current-bg '#ffffd7'
-set-window-option -g window-status-current-fg 'green'
-
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
+#setw -g window-status-current-bg '#ffffd7'
+setw -g window-status-current-fg 'green'
 
 # status bar color
 set -g status-bg 'white'
@@ -43,22 +66,14 @@ set -g status-left ''
 #set -g status-right ''
 #set -g status-right '#[fg=green]#H'
 
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
-# increase scrollback lines
-set -g history-limit 10000
-
-# switch to last pane
-#bind-key a last-pane
-
 # switch to last window
-bind-key a last-window
+bind - last-window
 
-bind-key _ split-window
-bind-key | split-window -h
+# easy to remember split pane commands
+bind | split-window -h
+bind _ split-window -v
+unbind '"'
+unbind %
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
