--- a/tmux.conf
+++ b/tmux.conf
@@ -58,7 +58,7 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 setw -g window-status-current-fg 'green'
 
 # status bar color
-set -g status-bg 'white'
+set -g status-bg 'black'
 set -g status-fg '#808080'
 
 # remove administrative debris (session name, hostname, time) in status bar
