status-bg default, for both light and dark theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,17 @@
+# use UTF8
+set -g utf8
+set-window-option -g utf8 on
+
 # improve colors
 set -g default-terminal 'screen-256color'
 
-# C-b is not acceptable as a prefix, neither C-a, because both used by Vim
+# C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
 # Bind C-- as a prefix
 # http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
 set -g prefix C-_
 #bind C-_ send-prefix
 
-# Unbind C-b as the default prefix
+# Unbind C-b (the default prefix)
 unbind C-b
 
 # shortcut for reloading config
@@ -31,18 +35,32 @@ setw -g aggressive-resize on
 # increase scrollback lines
 set -g history-limit 10000
 
-# act like vim
+# use vim keybindings in copy mode
 setw -g mode-keys vi
 
 # y and p as in vim
 # https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
-bind Escape copy-mode
-unbind p
+bind Enter copy-mode
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind -t vi-copy 'Space' halfpage-down
-bind -t vi-copy 'Bspace' halfpage-up
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection
+bind -t vi-copy Space halfpage-down
+bind -t vi-copy Bspace halfpage-up
+
+# switch to last window
+bind Escape last-window
+
+bind > next-window
+bind < previous-window
+
+# Make the current window the first window
+bind T swap-window -t 1
+
+# use PREFIX | to split window horizontally and PREFIX - to split vertically
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 # http://robots.thoughtbot.com/post/53022241323/seamlessly-navigate-vim-and-tmux-splits
 # Smart pane switching with awareness of vim splits
@@ -53,27 +71,37 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# Highlight active window
-#setw -g window-status-current-bg '#ffffd7'
-setw -g window-status-current-fg 'green'
+# resize panes using PREFIX H, J, K, L
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
-# status bar color
-set -g status-bg 'black'
-set -g status-fg '#808080'
+# visual notification of activity in other windows
+setw -g monitor-activity on
+set -g visual-activity on
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 #set -g status-right ''
-#set -g status-right '#[fg=green]#H'
 
-# switch to last window
-bind - last-window
+# default statusbar colors
+set -g status-fg colour14
+set -g status-bg default
+#set -g status-attr dim
 
-# easy to remember split pane commands
-bind | split-window -h
-bind _ split-window -v
-unbind '"'
-unbind %
+# default window title colors
+set-window-option -g window-status-fg colour14
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour14
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
+# auto rename
+setw -g automatic-rename on
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
