tmux last-window back

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ setw -g mode-keys vi
 
 # y and p as in vim
 # https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
-bind Enter copy-mode
+bind Escape copy-mode
 bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
@@ -48,7 +48,7 @@ bind -t vi-copy Space halfpage-down
 bind -t vi-copy Bspace halfpage-up
 
 # switch to last window
-bind Escape last-window
+bind - last-window
 
 bind > next-window
 bind < previous-window
@@ -56,9 +56,9 @@ bind < previous-window
 # Make the current window the first window
 bind T swap-window -t 1
 
-# use PREFIX | to split window horizontally and PREFIX - to split vertically
+# use PREFIX | to split window horizontally and PREFIX _ to split vertically
 bind | split-window -h
-bind - split-window -v
+bind _ split-window -v
 unbind '"'
 unbind %
 
@@ -72,10 +72,10 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # resize panes using PREFIX H, J, K, L
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
