--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ setw -g mode-keys vi
 
 # y and p as in vim
 # https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
-bind Escape copy-mode
+bind Enter copy-mode
 bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
