--- a/tmux.conf
+++ b/tmux.conf
@@ -35,7 +35,11 @@ setw -g aggressive-resize on
 # increase scrollback lines
 set -g history-limit 10000
 
-# use vim keybindings in copy mode
+# Use vi keybindings for tmux commandline input.
+# Note that to get command mode you need to hit ESC twice...
+set -g status-keys vi
+
+# Use vi keybindings in copy and choice modes
 setw -g mode-keys vi
 
 # y and p as in vim
@@ -48,6 +52,7 @@ bind -t vi-copy Space halfpage-down
 bind -t vi-copy Bspace halfpage-up
 
 # switch to last window
+unbind l
 bind - last-window
 
 bind > next-window
@@ -62,14 +67,17 @@ bind _ split-window -v
 unbind '"'
 unbind %
 
-# http://robots.thoughtbot.com/post/53022241323/seamlessly-navigate-vim-and-tmux-splits
 # Smart pane switching with awareness of vim splits
+# https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# <prefix> Escape to clear the screen
+bind Escape send-keys 'C-l'
 
 # resize panes using PREFIX H, J, K, L
 bind -r H resize-pane -L 5
@@ -79,7 +87,7 @@ bind -r L resize-pane -R 5
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
-set -g visual-activity on
+#set -g visual-activity on
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
