windows numbering from 0, status-right displays current kb layout

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,8 +21,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set -sg escape-time 1
 
 # start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-setw -g pane-base-index 1
+#set -g base-index 1
+#setw -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
@@ -91,7 +91,8 @@ setw -g monitor-activity on
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
-#set -g status-right ''
+#set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
+set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
 
 # default statusbar colors
 set -g status-fg colour14
