prefix esc = last-pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,9 @@ bind -t vi-copy Bspace halfpage-up
 unbind l
 bind - last-window
 
+unbind \;
+bind Escape last-pane
+
 bind > next-window
 bind < previous-window
 
@@ -76,8 +79,8 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# <prefix> Escape to clear the screen
-bind Escape send-keys 'C-l'
+# <prefix> l to clear the screen
+bind l send-keys 'C-l'
 
 # resize panes using PREFIX H, J, K, L
 bind -r H resize-pane -L 5
