--- a/tmux.conf
+++ b/tmux.conf
@@ -61,8 +61,9 @@ bind Escape last-pane
 bind > next-window
 bind < previous-window
 
-# Make the current window the first window
-bind T swap-window -t 1
+# Make the current window the Top window
+# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
+bind T swap-window -t 0
 
 # use PREFIX | to split window horizontally and PREFIX _ to split vertically
 bind | split-window -h
