prefix esc = last-pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,11 +55,15 @@ bind -t vi-copy Bspace halfpage-up
 unbind l
 bind - last-window
 
+unbind \;
+bind Escape last-pane
+
 bind > next-window
 bind < previous-window
 
-# Make the current window the first window
-bind T swap-window -t 1
+# Make the current window the Top window
+# http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
+bind T swap-window -t 0
 
 # use PREFIX | to split window horizontally and PREFIX _ to split vertically
 bind | split-window -h
@@ -76,8 +80,8 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# <prefix> Escape to clear the screen
-bind Escape send-keys 'C-l'
+# <prefix> l to clear the screen
+bind l send-keys 'C-l'
 
 # resize panes using PREFIX H, J, K, L
 bind -r H resize-pane -L 5
