tmux send-prefix & vi nocompatible

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g default-terminal 'screen-256color'
 # Bind C-- as a prefix
 # http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
 set -g prefix C-_
-#bind C-_ send-prefix
+bind a send-prefix
 
 # Unbind C-b (the default prefix)
 unbind C-b
@@ -117,4 +117,4 @@ set-window-option -g window-status-current-attr bright
 setw -g automatic-rename on
 
 # Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+#if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
