http://superuser.com/questions/517402/force-update-for-tmux-status-bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,13 +53,13 @@ bind -t vi-copy Bspace halfpage-up
 
 # switch to last window
 unbind l
-bind - last-window
+bind - last-window\; refresh-client -S
 
 unbind \;
-bind Escape last-pane
+bind Escape last-pane\; refresh-client -S
 
-bind > next-window
-bind < previous-window
+bind > next-window\; refresh-client -S
+bind < previous-window\; refresh-client -S
 
 # Make the current window the Top window
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
