--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g utf8
 set-window-option -g utf8 on
 
 # improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'xterm-256color'
 
 # C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
 # Bind C-- as a prefix
