--- a/tmux.conf
+++ b/tmux.conf
@@ -58,8 +58,8 @@ bind - last-window\; refresh-client -S
 unbind \;
 bind Escape last-pane\; refresh-client -S
 
-bind > next-window\; refresh-client -S
-bind < previous-window\; refresh-client -S
+#bind > next-window\; refresh-client -S
+bind u previous-window\; refresh-client -S
 
 # Make the current window the Top window
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
