tmux solarized theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -93,28 +93,16 @@ bind -r L resize-pane -R 5
 setw -g monitor-activity on
 #set -g visual-activity on
 
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-#set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
-set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
-
-# default statusbar colors
-set -g status-fg colour14
-set -g status-bg default
-#set -g status-attr dim
-
-# default window title colors
-set-window-option -g window-status-fg colour14
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour14
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
-
 # auto rename
 setw -g automatic-rename on
 
+# remove administrative debris (session name, hostname, time) in status bar
+#set -g status-left ''
+#set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
+#set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
+
 # Local config
 #if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+if-shell "[ -f ~/.tmuxcolors-256.conf ]" 'source ~/.tmuxcolors-256.conf'
+if '[[ "$BACKGROUND" =~ light ]]' 'source ~/.tmuxcolors-light.conf'
+if '[[ "$BACKGROUND" =~ dark ]]' 'source ~/.tmuxcolors-dark.conf'
