alt-g to global locate with fzf

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,9 @@ set-window-option -g utf8 on
 # improve colors
 set -g default-terminal 'screen-256color'
 
+# escape delay
+set -sg escape-time 0
+
 # C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
 # Bind C-- as a prefix
 # http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
@@ -19,8 +22,8 @@ unbind C-b
 # shortcut for reloading config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# escape delay
-set -sg escape-time 1
+# fzf-locate
+bind -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # start window numbers at 1 to match keyboard order with tmux window order
 #set -g base-index 1
