comment what bind -n means

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,7 @@ unbind C-b
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # fzf-locate
+# -n means binding without prefix
 bind -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # start window numbers at 1 to match keyboard order with tmux window order
