reattach-to-user-namespace for tmux copy/paste

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,17 +10,21 @@ set -g default-terminal 'screen-256color'
 # escape delay
 set -sg escape-time 0
 
+# Unbind C-b (the default prefix)
+unbind C-b
+
 # C-b is not acceptable as a prefix, neither C-a, because both are used by Vim
 # Bind C-- as a prefix
 # http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
 set -g prefix C-_
-bind a send-prefix
-
-# Unbind C-b (the default prefix)
-unbind C-b
+# use send-prefix to pass C-a through to application
+bind C-_ send-prefix
 
 # shortcut for reloading config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# provide access to the clipboard for pbpaste, pbcopy
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # fzf-locate
 # -n means binding without prefix
@@ -45,17 +49,21 @@ set -g history-limit 10000
 # Note that to get command mode you need to hit ESC twice...
 set -g status-keys vi
 
-# Use vi keybindings in copy and choice modes
-setw -g mode-keys vi
-
 # y and p as in vim
 # https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
-bind Enter copy-mode
+setw -g mode-keys vi
+bind Space copy-mode
+unbind p
 bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+
+# setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
 bind -t vi-copy Space halfpage-down
 bind -t vi-copy Bspace halfpage-up
+
+bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 
 # switch to last window
 unbind l
