custom status-right

--- a/tmux.conf
+++ b/tmux.conf
@@ -112,8 +112,8 @@ setw -g automatic-rename on
 
 # remove administrative debris (session name, hostname, time) in status bar
 #set -g status-left ''
-#set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
-#set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
+# set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
+set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
 
 # Local config
 #if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
