--- a/tmux.conf
+++ b/tmux.conf
@@ -115,8 +115,5 @@ setw -g automatic-rename on
 # set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
 set -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
 
-# Local config
-#if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+# Solarized 256
 if-shell "[ -f ~/.tmuxcolors-256.conf ]" 'source ~/.tmuxcolors-256.conf'
-if '[[ "$BACKGROUND" =~ light ]]' 'source ~/.tmuxcolors-light.conf'
-if '[[ "$BACKGROUND" =~ dark ]]' 'source ~/.tmuxcolors-dark.conf'
