nice reload message

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ set -g prefix C-_
 bind C-_ send-prefix
 
 # shortcut for reloading config
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display " ✱ ~/.tmux.conf is reloaded"
 
 # provide access to the clipboard for pbpaste, pbcopy
 set-option -g default-command "reattach-to-user-namespace -l zsh"
@@ -57,12 +57,10 @@ unbind p
 bind p paste-buffer
 
 # setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 bind -t vi-copy Space halfpage-down
 bind -t vi-copy Bspace halfpage-up
-
 bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 
 # switch to last window
