send-prefix to Space

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,11 @@ set-window-option -g utf8 on
 set -g default-terminal 'screen-256color'
 
 # escape delay
-set -sg escape-time 0
+set -sg escape-time 1
+
+# Update the status bar every sixty seconds
+# devault value is 15
+set -g status-interval 60
 
 # Unbind C-b (the default prefix)
 unbind C-b
@@ -17,8 +21,8 @@ unbind C-b
 # Bind C-- as a prefix
 # http://unix.stackexchange.com/questions/158278/tmux-how-do-i-bind-to-c-control-minus
 set -g prefix C-_
-# use send-prefix to pass C-a through to application
-bind C-_ send-prefix
+# use send-prefix to pass the prefix through
+bind Space send-prefix
 
 # shortcut for reloading config
 bind r source-file ~/.tmux.conf \; display " ✱ ~/.tmux.conf is reloaded"
@@ -52,7 +56,7 @@ set -g status-keys vi
 # y and p as in vim
 # https://gist.github.com/anonymous/6bebae3eb9f7b972e6f0
 setw -g mode-keys vi
-bind Space copy-mode
+# bind Space copy-mode # use [
 unbind p
 bind p paste-buffer
 
@@ -70,7 +74,8 @@ bind - last-window\; refresh-client -S
 unbind \;
 bind Escape last-pane\; refresh-client -S
 
-#bind > next-window\; refresh-client -S
+# next-window is n by default
+# p is bound to paste
 bind u previous-window\; refresh-client -S
 
 # Make the current window the Top window
