--- a/tmux.conf
+++ b/tmux.conf
@@ -71,9 +71,6 @@ bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 unbind l
 bind - last-window\; refresh-client -S
 
-unbind \;
-bind Escape last-pane\; refresh-client -S
-
 # next-window is n by default
 # p is bound to paste
 bind u previous-window\; refresh-client -S
@@ -83,22 +80,22 @@ bind u previous-window\; refresh-client -S
 bind T swap-window -t 0
 
 # use PREFIX | to split window horizontally and PREFIX _ to split vertically
-bind | split-window -h
-bind _ split-window -v
-unbind '"'
-unbind %
+# bind | split-window -h
+# bind _ split-window -v
+# unbind '"'
+# unbind %
 
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-h if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-\ if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 
-# <prefix> l to clear the screen
-bind l send-keys 'C-l'
+# <prefix> Escape to clear the screen
+bind Escape send-keys 'C-l'
 
 # resize panes using PREFIX H, J, K, L
 bind -r H resize-pane -L 5
