--- a/tmux.conf
+++ b/tmux.conf
@@ -88,7 +88,7 @@ bind T swap-window -t 0
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind -n C-h if-shell "$is_vim" "send-keys C-\\" "last-pane"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
