--- a/tmux.conf
+++ b/tmux.conf
@@ -88,11 +88,11 @@ bind T swap-window -t 0
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-\\" "last-pane"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "last-pane"
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 
 # <prefix> Escape to clear the screen
 bind Escape send-keys 'C-l'
