tmux version update

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,7 @@
 # http://tmux.cvs.sourceforge.net/viewvc/tmux/tmux/FAQ
 
-# use UTF8
-set -g utf8
-set-window-option -g utf8 on
+# set -g utf8
+# set-window-option -g utf8 on
 
 # improve colors
 set -g default-terminal 'screen-256color'
