--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,7 @@
 # http://tmux.cvs.sourceforge.net/viewvc/tmux/tmux/FAQ
 
-# set -g utf8
-# set-window-option -g utf8 on
-
 # improve colors
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal 'screen-256color'
 
 # escape delay
@@ -31,11 +29,11 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # fzf-locate
 # -n means binding without prefix
-bind -n 'M-g' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
+bind -n 'M-l' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(locate / | fzf -m | paste -sd\\  -)\"'"
 
 # start window numbers at 1 to match keyboard order with tmux window order
-#set -g base-index 1
-#setw -g pane-base-index 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
@@ -78,12 +76,6 @@ bind u previous-window\; refresh-client -S
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind T swap-window -t 0
 
-# use PREFIX | to split window horizontally and PREFIX _ to split vertically
-# bind | split-window -h
-# bind _ split-window -v
-# unbind '"'
-# unbind %
-
 # Smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -92,6 +84,16 @@ bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
+bind -n M-& select-window -t 1
+bind -n M-[ select-window -t 2
+bind -n M-{ select-window -t 3
+bind -n M-} select-window -t 4
+bind -n M-( select-window -t 5
+bind -n M-= select-window -t 6
+bind -n M-* select-window -t 7
+bind -n M-) select-window -t 8
+bind -n M-+ select-window -t 9
 
 # <prefix> Escape to clear the screen
 bind Escape send-keys 'C-l'
